Apply Spotless to the imported sources
Dedicated formatting-only commit over the files imported from
rspace-core-util, rspace-audit, rspace-core-model, and
rspace-test-util, none of which carried a formatter config. Includes
the CleanThat pass (-DspotlessStrict) that the pre-commit hook checks
staged files against. No functional changes; use "view blame prior to
this change" to reach the pre-import history of any line.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>